<resources>
    <string name="app_name">找牌网</string>

    <!-- time -->
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_code">验证码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">注册</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">手机号不能为空</string>
    <string name="error_field_required_password">密码不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="next">下一步</string>
    <string name="setting_password">设置密码</string>
    <string name="input_name">输入姓名</string>
    <string name="new_password">新密码</string>
    <string name="repeat_password">确认密码</string>
    <string name="action_settings">设置</string>
    <string name="confirm">确认</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_media">寻找媒体</string>
    <string name="project_name">项目名称</string>
    <string name="add_project_name">请输入具体的项目或产品名称</string>
    <string name="industry">所属行业</string>
    <string name="input_industry">请输入所属行业</string>
    <string name="media_style">媒体形式</string>
    <string name="choose_one_media_style">请选择媒体形式</string>
    <string name="begin_time">投放始于</string>
    <string name="set_up_begin_time">设置开始时间</string>
    <string name="end_time">投放止于</string>
    <string name="set_up_end_time">设置结束时间</string>
    <string name="area">投放区域</string>
    <string name="input_area">请填写投放区域</string>
    <string name="price">投放预算</string>
    <string name="input_price">请填写投放预算</string>
    <string name="info">附加要求</string>
    <string name="input_info">请输入投放详情信息</string>
    <string name="submit">提交</string>
    <string name="report_media">媒体报备</string>
    <string name="customer_name">客户名称</string>
    <string name="input_customer_name">请填写客户名称</string>
    <string name="title_activity_map_detail">MapDetailActivity</string>

</resources>
