<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:scaleType="center"
            android:src="@mipmap/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/report_media"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:overScrollMode="always">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EBEBEB" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@color/white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:text="@string/project_name"
                        android:textColor="#666666" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        android:hint="@string/add_project_name"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:inputType="text" />
                </LinearLayout>

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginStart="20dp"-->
                    <!--android:background="#EBEBEB" />-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="42dp"-->
                    <!--android:background="@color/white"-->
                    <!--android:focusable="true"-->
                    <!--android:focusableInTouchMode="true"-->
                    <!--android:orientation="horizontal">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_marginStart="20dp"-->
                        <!--android:text="@string/industry"-->
                        <!--android:textColor="#666666" />-->

                    <!--<EditText-->
                        <!--android:id="@+id/industry"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_marginLeft="20dp"-->
                        <!--android:layout_marginRight="20dp"-->
                        <!--android:background="@color/white"-->
                        <!--android:hint="@string/input_industry"-->
                        <!--android:textColor="@color/black"-->
                        <!--android:maxLines="1"-->
                        <!--android:textSize="14sp" />-->
                <!--</LinearLayout>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#EBEBEB" />

                <LinearLayout
                    android:id="@+id/start_time_llyt"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/begin_time"
                        android:textColor="#666666" />

                    <TextView
                        android:id="@+id/start_time"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="40dp"
                        android:layout_weight="3"
                        android:hint="@string/set_up_begin_time"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_weight="1"
                        android:src="@mipmap/turn_left"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#EBEBEB" />

                <LinearLayout
                    android:id="@+id/end_time_llyt"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/end_time"
                        android:textColor="#666666" />

                    <TextView
                        android:id="@+id/end_time"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="40dp"
                        android:layout_weight="3"
                        android:hint="@string/set_up_end_time"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_weight="1"
                        android:src="@mipmap/turn_left"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#EBEBEB" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:text="投放城市"
                        android:textColor="#666666" />

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        android:hint="@string/input_price"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:inputType="text" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#EBEBEB" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:text="投放区域"
                        android:textColor="#666666" />
                    <!--CBD，步行街之类的-->

                    <EditText
                        android:id="@+id/area"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        android:hint="@string/input_price"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:inputType="text" />
                </LinearLayout>

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginStart="20dp"-->
                    <!--android:background="#EBEBEB" />-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="36dp"-->
                    <!--android:background="@color/white"-->
                    <!--android:orientation="horizontal">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_marginStart="20dp"-->
                        <!--android:text="@string/customer_name"-->
                        <!--android:textColor="#666666" />-->

                    <!--<EditText-->
                        <!--android:id="@+id/customer"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_marginLeft="20dp"-->
                        <!--android:layout_marginRight="20dp"-->
                        <!--android:background="@color/white"-->
                        <!--android:hint="@string/input_customer_name"-->
                        <!--android:textColor="@color/black"-->
                        <!--android:maxLines="1"-->
                        <!--android:textSize="14sp"-->
                        <!--android:inputType="text" />-->
                <!--</LinearLayout>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#EBEBEB" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:text="投放详情"
                        android:textColor="#666666" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/introduction"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/white"
                        android:gravity="top"
                        android:hint="@string/input_info"
                        android:textColor="@color/black"
                        android:paddingTop="2dp"
                        android:textSize="14sp"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#a7d7cd"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="#ffffff" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
